Task2/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scaletestapp
  labels:
    app: scaletestapp
    app.kubernetes.io/name: scaletestapp
    app.kubernetes.io/part-of: insuretech
    app.kubernetes.io/component: api
spec:
  podSelector:
    matchLabels:
      app: scaletestapp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
